<?xml version="1.0"?>
<package>
  <name>wgs_conversions</name>
  <version>0.0.0</version>
  <description>A ROS server implementation of the World Geodetic System (WGS) conversion functions for converting to/from LLA, ENU, and ECEF. </description>

  <maintainer email="jdp0009@auburn.edu">Dan Pierce</maintainer>

  <license>BSD</license>

  <author email="jdp0009@auburn.edu">Dan Pierce</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
